@@ -31,6 +31,9 @@
    - deraadt@cvs.openbsd.org 2001/07/09 07:04:53
      [session.c sftp-int.c]
      correct type on last arg to execl(); nordin@cse.ogi.edu
+   - markus@cvs.openbsd.org 2001/07/10 21:49:12
+     [readpass.c]
+     don't panic if fork or pipe fail (just return an empty passwd).
 
 20010711
  - (djm) dirname(3) may modify its argument on glibc and other systems. 
